# AED

./: .gitignore  CMakeLists.txt
BinaryTree/: Simple.cpp
Lab1PointersExercises/: Exercise1.cpp  Exercise2.cpp  Exercise3.cpp
Lab2Comparisons(S,P,PF,F)/: comparisons.cpp
Lab3LinkedList/: Circular1Pointer.cpp  Circular2Pointer.cpp  CircularDoubly.cpp  Doubly.cpp  FunctorForm.cpp  Simple1Pointer.cpp  Simple2Pointer.cpp
Lab4BinaryTree/: SimpleLevel.cpp  SimpleRecursive.cpp  SimpleStack.cpp
Lab5AVLTree/: Pointer2Parent.cpp
ParcialExam/: Question1.cpp  Question2.cpp  Question3.cpp  Question4.cpp
