cmake_minimum_required(VERSION 3.16)
project(AED)

set(CMAKE_CXX_STANDARD 20)

#add_executable(AED Lab3LinkedList/Simple1Pointer.cpp)
#add_executable(AED Lab3LinkedList/Simple2Pointer.cpp)
#add_executable(AED Lab3LinkedList/Doubly.cpp)
#add_executable(AED Lab3LinkedList/Circular1Pointer.cpp)
#add_executable(AED Lab3LinkedList/Circular2Pointer.cpp)
add_executable(AED Lab5AVLTree/Pointer2Parent.cpp)